--- a/index.html
+++ b/index.html
@@ -13,34 +13,34 @@
     crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="container-fluid full-height big-outer-container">
+    <div class="container-fluid full-height transition big-outer-container">
       <div class="row full-height vertical-center horizontal-center">
         <div class="col-lg-4 col-md-6 col-sm-8 col-xs-10 main-container">
           <div class="col-xs-12">
             <div class="quote-container text-center">
               <div class="quote-icon-container">
-                <i class="fas fa-quote-left"></i> 
+                <i class="fas fa-quote-left transition"></i> 
               </div>
-              <h3 id="quote" class="text"></h4>
+              <h3 id="quote" class="text transition"></h4>
               <div class="quote-icon-container">
-                <i class="fas fa-quote-right"></i>
+                <i class="fas fa-quote-right transition"></i>
               </div>
             </div>
             <div class="author-container">
-              <h5 id="author" class="text"></h5>
+              <h5 id="author" class="text transition"></h5>
             </div>
           </div>
           <div class="button-container">
             <div class="pull-left button-container__left">
-              <a class="btn social-button" id="twitter" target="_blank">
+              <a class="btn social-button transition" id="twitter" target="_blank">
                 <i class="fab fa-twitter"></i>
               </a>
-              <a class="btn social-button" id="tumblr" target="_blank">
+              <a class="btn social-button transition" id="tumblr" target="_blank">
                 <i class="fab fa-tumblr"></i>
               </a>
             </div>
             <div class="pull-right button-container__right">
-              <button class="btn" onclick="getQuote()">New Quote</button>
+              <button class="btn transition" onclick="getQuote()">New Quote</button>
             </div>
           </div>
         </div>
