Add transition opacity for quote mark

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
           <div class="col-xs-12">
             <div class="quote-container text-center">
               <div class="quote-icon-container">
-                <i class="fas fa-quote-left transition"></i> 
+                <i class="fas fa-quote-left opacity-0 transition"></i> 
               </div>
               <h3 id="quote" class="text transition"></h4>
               <div class="quote-icon-container">
-                <i class="fas fa-quote-right transition"></i>
+                <i class="fas fa-quote-right opacity-0 transition"></i>
               </div>
             </div>
             <div class="author-container">
